--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2"
   }
 }
